exports[`test should render a default time input 1`] = `
<div
  className="terra-TimeInput">
  <input
    className="terra-hidden-time-input"
    name="time-input"
    type="hidden"
    value="" />
  <Input
    className="terra-TimeInput-hour"
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\d*"
    placeholder="hh"
    required={false}
    type="text"
    value="" />
  <span>
    :
  </span>
  <Input
    className="terra-TimeInput-minute"
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\d*"
    placeholder="mm"
    required={false}
    type="text"
    value="" />
</div>
`;

exports[`test should render a time input with a default time 1`] = `
<div
  className="terra-TimeInput">
  <input
    className="terra-hidden-time-input"
    name="time-input"
    type="hidden"
    value="T10:45" />
  <Input
    className="terra-TimeInput-hour"
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\d*"
    placeholder="hh"
    required={false}
    type="text"
    value="10" />
  <span>
    :
  </span>
  <Input
    className="terra-TimeInput-minute"
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\d*"
    placeholder="mm"
    required={false}
    type="text"
    value="45" />
</div>
`;

exports[`test should render a time input with custom attributes 1`] = `
<div
  className="terra-TimeInput">
  <input
    className="terra-hidden-time-input"
    name="time-input"
    type="hidden"
    value="" />
  <Input
    className="terra-TimeInput-hour"
    id="terra-time-input"
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\d*"
    placeholder="hh"
    required={false}
    type="text"
    value="" />
  <span>
    :
  </span>
  <Input
    className="terra-TimeInput-minute"
    id="terra-time-input"
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\d*"
    placeholder="mm"
    required={false}
    type="text"
    value="" />
</div>
`;

exports[`test should render a time input with onChange 1`] = `
<div
  className="terra-TimeInput">
  <input
    className="terra-hidden-time-input"
    name="time-input"
    type="hidden"
    value="" />
  <Input
    className="terra-TimeInput-hour"
    maxLength="2"
    name="terra-time-hour-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\d*"
    placeholder="hh"
    required={false}
    type="text"
    value="" />
  <span>
    :
  </span>
  <Input
    className="terra-TimeInput-minute"
    maxLength="2"
    name="terra-time-minute-time-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\d*"
    placeholder="mm"
    required={false}
    type="text"
    value="" />
</div>
`;
